--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
+    "vee-validate": "^4.10.8",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
