--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.1",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "register-service-worker": "^1.7.2",
     "vee-validate": "^4.10.8",
     "vue": "^3.2.13",
